--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	</head>
 	<body>
 		<h1>Basic tetris</h1>
+		<h2 id="gameOver"></h2>
 		<h3>Score<span id="score">0</span></h3>
+
 		<button id="start">Start/Pause</button>
 		<div class="container">
 			<div class="grid">
