--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/css/style.css" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"
+			rel="stylesheet"
+		/>
 		<title>Tetris</title>
 	</head>
 	<body>
@@ -13,6 +17,7 @@
 		<h3>Score<span id="score">0</span></h3>
 
 		<button id="start">Start/Pause</button>
+		<button id="startAgain">Start again</button>
 		<div class="container">
 			<div class="grid">
 				<div></div>
