--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<h1>Basic tetris</h1>
 		<h2 id="gameOver"></h2>
-		<h3>Score<span id="score">0</span></h3>
+		<h3>Score: <span id="score">0</span></h3>
 
 		<button id="start">Start/Pause</button>
 		<button id="startAgain">Start again</button>
