--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<title>Tetris</title>
 	</head>
 	<body>
-		<h1>Basic tetris</h1>
+		<h1>Simple tetris</h1>
 		<h2 id="gameOver"></h2>
 		<h3>Score: <span id="score">0</span></h3>
 
