touch btns added

--- a/index.html
+++ b/index.html
@@ -266,6 +266,13 @@
 				</div>
 			</div>
 
+			<div class="touchControls">
+				<button type="button" id="leftBtn"><</button>
+				<button type="button" id="rotateBtn">O</button>
+				<button type="button" id="rightBtn">></button>
+				<button type="button" id="downBtn">|</button>
+			</div>
+
 			<div class="playlist">
 				<audio id="ambient" src="./audio/ambient.wav" loop="true"></audio>
 				<audio id="over" src="./audio/over.wav" loop="false"></audio>
