--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+		<meta name="viewport" content="width=device-width, user-scalable=no" />
+
 		<link rel="stylesheet" href="./css/style.css" />
 		<link
 			href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"
