lineFill sound added

--- a/index.html
+++ b/index.html
@@ -271,18 +271,18 @@
 			</div>
 
 			<div class="touchControls">
+				<button type="button" id="leftBtn"><</button>
 				<button type="button" id="rotateBtn">o</button>
-				<div class="lrBtns">
-					<button type="button" id="leftBtn"><</button>
-					<button type="button" id="rightBtn">></button>
-				</div>
+
 				<button type="button" id="downBtn">|</button>
+				<button type="button" id="rightBtn">></button>
 			</div>
 
 			<div class="playlist">
 				<audio id="ambient" src="./audio/ambient.wav" loop="true"></audio>
 				<audio id="over" src="./audio/over.wav" loop="false"></audio>
 				<audio id="levelUp" src="./audio/levelUp.wav"></audio>
+				<audio id="lineFill" src="./audio/lineFill.wav"></audio>
 			</div>
 		</div>
 		<script src="./app.js"></script>
