--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 				</div>
 				<div class="scoreTable">
 					<h3>HI SCORE</h3>
-					<ul class="hiScore">
-						<li class="hiScoreLine">100</li>
-					</ul>
+					<p id="hiScoreLine">0000</p>
 				</div>
 			</div>
 			<div class="startPauseBtns">
@@ -283,6 +281,7 @@
 				<audio id="over" src="./audio/over.wav" loop="false"></audio>
 				<audio id="levelUp" src="./audio/levelUp.wav"></audio>
 				<audio id="lineFill" src="./audio/lineFill.wav"></audio>
+				<audio id="tap" src="./audio/tap.wav"></audio>
 			</div>
 		</div>
 		<script src="./app.js"></script>
