--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			<div class="startPauseBtns">
 				<button id="start">Start/Pause</button>
 				<button id="startAgain">Start again</button>
+				<button id="mute">Mute</button>
 			</div>
 			<div class="container">
 				<div class="grid">
