music button added

--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
 				</div>
 				<div class="scoreTable">
 					<h3>HI SCORE</h3>
-					<p id="hiScoreLine">0000</p>
+					<p id="hiScoreLine">000</p>
 				</div>
 			</div>
 			<div class="startPauseBtns">
 				<button id="start">Start/Pause</button>
-				<button id="startAgain">Start again</button>
+				<button id="startAgain">New Game</button>
 				<button id="mute">Mute</button>
+				<button id="nextMusic">Music</button>
 			</div>
 			<div class="container">
 				<div class="grid">
@@ -279,6 +280,8 @@
 
 			<div class="playlist">
 				<audio id="ambient" src="./audio/ambient.wav" loop="true"></audio>
+				<audio id="ambient2" src="./audio/ambient2.wav" loop="true"></audio>
+				<audio id="ambient3" src="./audio/ambient3.wav" loop="true"></audio>
 				<audio id="over" src="./audio/over.wav" loop="false"></audio>
 				<audio id="levelUp" src="./audio/levelUp.wav"></audio>
 				<audio id="lineFill" src="./audio/lineFill.wav"></audio>
