swipe gestures test

--- a/index.html
+++ b/index.html
@@ -271,25 +271,31 @@
     <div class="touchControls">
       <button type="button" id="leftBtn">
         <div class="touchControlArrow">
-          <svg width="20px" heigh="20px">
+          <svg width="20px" height="20px">
             <use href="./svg/icons.svg#left" />
           </svg>
         </div>
       </button>
       <button type="button" id="rotateBtn">
-        <div class="touchControlArrow"><svg width="22px" heigh="22px">
+        <div class="touchControlArrow">
+          <svg width="22px" height="22px">
             <use href="./svg/icons.svg#rotate" x="-2" y="-2" />
-          </svg></div>
+          </svg>
+        </div>
       </button>
       <button type="button" id="downBtn">
-        <div class="touchControlArrow"><svg width="20px" heigh="20px">
+        <div class="touchControlArrow">
+          <svg width="20px" height="20px">
             <use href="./svg/icons.svg#down" />
-          </svg></div>
+          </svg>
+        </div>
       </button>
       <button type="button" id="rightBtn">
-        <div class="touchControlArrow"><svg width="20px" heigh="20px">
+        <div class="touchControlArrow">
+          <svg width="20px" height="20px">
             <use href="./svg/icons.svg#right" />
-          </svg></div>
+          </svg>
+        </div>
       </button>
     </div>
 
